finished_promotion_pattern

--- a/about/about.html
+++ b/about/about.html
@@ -30,18 +30,6 @@
         </section>
 
 
-        <section id="content_placeholder"></section>
-
-
-
-
-
-
-
-
-
-
-
         <section id="story" class="story__container" style="display:none">
                 <article>
                     <img src="/about/Info_img/story_chicken_1_500x500.png" width="500px" height="500px" alt="first fried chicken picture of the story">
@@ -69,6 +57,26 @@
                 </article>
         </section>
         
+        <section id="promotion news" class="promotions_container">
+            <article class="promotion_box">
+                <div class="img_price_container">
+                    
+                    <img src="/about/Info_img/combo_chicken_500x500.png" width="500px" height="500px" alt="Combo promotion 1 Chicken Bucket medium">
+                    <div class="combo_name-price">
+                        <p><span class="nowrap">Chicken Bucket Medium</span></p>
+                        <p><span class="old_price">800</span>$</p>
+                        <p><span class="promotion_price">500</span>$</p>
+                    </div>
+                </div>
+                <div class="quantity_btn_container">
+                    <input type="text" inputmode="numeric">
+                    <div class="increase_decrease_btn_container">
+                        <button class="decrease_btn">-</button>
+                        <button class="increase_btn">+</button>
+                    </div>
+                </div>
+            </article>
+        </section>
 
 
 
@@ -78,9 +86,10 @@
 
 
     </main>
+    <script src="/about/about.js"></script>
 </body>
 
 
 
-<script src="/about.js"></script>
+
 </html>
