--- a/about/about.html
+++ b/about/about.html
@@ -23,65 +23,18 @@
             </section>
         </div>
         <section class="about_us_btn">
-            <button onclick="show_story()"><span class="nowrap">Our Story</span></button>
-            <button><span class="nowrap">Promotion News</span></button>
-            <button>Carreer</button>
-            <button><span class="nowrap">Book a Party</span></button>
+            <button id="ourstory_btn"><span class="nowrap">Our Story</span></button>
+            <button id="promotionnew_btn"><span class="nowrap">Promotion News</span></button>
+            <button id="career_btn">Carreer</button>
+            <button id="bookaparty_btn"><span class="nowrap">Book a Party</span></button>
         </section>
 
-
-        <section id="story" class="story__container" style="display:none">
-                <article>
-                    <img src="/about/Info_img/story_chicken_1_500x500.png" width="500px" height="500px" alt="first fried chicken picture of the story">
-                    <p>
-                        Once upon a time, there was an old man call The Oldman who had a dream of opening his own fried chicken restaurant. He had always loved fried chicken, and he believed that he could make the best fried chicken in the world. The Oldman worked hard to save up enough money to open his restaurant. He also spent years perfecting his fried chicken recipe. She experimented with different flours, seasonings, and cooking methods until he finally found the perfect combination.When The Oldman finally opened his restaurant, he called it "The Oldman" he was excited to share his delicious fried chicken with the world
-                    </p>
-                </article>
-                <article>
-                    <img src="/about/Info_img/story_chicken_2_743x570.png" width="743px" height="570px" alt="second fried chicken picture of the story">
-                    <p>
-                        The Oldman Fried Chicken was a hit from the start. People loved his crispy, juicy chicken and his flavorful seasonings. The Oldman's restaurant quickly became a popular spot for locals and tourists alike. The Oldman was passionate about his food and his customers. He loved interacting with his customers and hearing their feedback. He was also always looking for ways to improve his menu and his restaurant. One day, The Oldman decided to enter his fried chicken in a local cooking contest. He was up against some of the best chefs in the city, but He was confident in his recipe. The Oldman's fried chicken won the contest! his chicken was praised by the judges for its flavor, texture, and presentation
-                    </p>
-                </article>
-                <article>
-                    <img src="/about/Info_img/story_chicken_3_500x500.png" width="500px" height="500px" alt="third fried chicken picture of the story">
-                    <p>
-                        After The Old man won the cooking contest, her restaurant became even more popular. People from all over the country came to try her fried chicken. The Old man even started receiving offers from investors who wanted to help her expand her business. The Old man was proud of what she had accomplished. She had started out with a small dream, and she had turned it into a successful business. She was also grateful for the support of her customers and her team.
-                    </p>
-                </article>
-                <article>
-                    <img src="/about/Info_img/story_chicken_4_461x336.png" width="461px" height="336px" alt="fourth fried chicken picture of the story">
-                    <p>
-                        The Old man's Fried Chicken is now a national chain with restaurants all over the country. The Old man herself is a celebrity chef, and she has appeared on numerous cooking shows and magazines. She is also an inspiration to many young entrepreneurs who dream of starting their own businesses.The Old man's story is a reminder that anything is possible if you have a dream and you're willing to work hard. It's also a reminder that the best food is made with love and passion.
-                    </p>
-                </article>
-        </section>
         
-        <section id="promotion news" class="promotions_container">
-            <article class="promotion_box">
-                <div class="img_price_container">
-                    
-                    <img src="/about/Info_img/combo_chicken_500x500.png" width="500px" height="500px" alt="Combo promotion 1 Chicken Bucket medium">
-                    <div class="combo_name-price">
-                        <p><span class="nowrap">Chicken Bucket Medium</span></p>
-                        <p><span class="old_price">800</span>$</p>
-                        <p><span class="promotion_price">500</span>$</p>
-                    </div>
-                </div>
-                <div class="quantity_btn_container">
-                    <input type="text" inputmode="numeric">
-                    <div class="increase_decrease_btn_container">
-                        <button class="decrease_btn">-</button>
-                        <button class="increase_btn">+</button>
-                    </div>
-                </div>
-            </article>
+
+        <section id="storyholder" class="story__container">
         </section>
 
-
-
-
-
+        <section id="promotionholder"></section>
 
 
 
