--- a/about/about.html
+++ b/about/about.html
@@ -28,17 +28,14 @@
             <button id="career_btn">Carreer</button>
             <button id="bookaparty_btn"><span class="nowrap">Book a Party</span></button>
         </section>
-
-        
-
         <section id="storyholder" class="story__container">
         </section>
-
         <section id="promotionholder"></section>
-
-
-
+        <section id="careerholder"></section>
+        <section id="footer">
+        </section>
     </main>
+     
     <script src="/about/about.js"></script>
 </body>
 
