--- a/about/about.html
+++ b/about/about.html
@@ -38,7 +38,8 @@
 
         <section id="careerholder"></section>
 
-        
+
+        <section id="partyholder"></section>
 
 
         <section id="footer"></section>
