--- a/checkout.html
+++ b/checkout.html
@@ -18,156 +18,79 @@
         <!-- Section checkout -->
         <section class="checkout">
           <h2 class="section-heading">Payment Details</h2>
-          <div class="payment-form">
+          <div id="payment-form" class="payment-form">
             <div class="payment-method">
-              <button class="method selected">
-                <ion-icon name="card"></ion-icon>
-                <span>Credit Card</span>
-                <ion-icon
-                  class="checkmark fill"
-                  name="checkmark-circle"
-                ></ion-icon>
+              <button id="credit-card" class="method">
+                <div class="method-header">
+                  <ion-icon name="card"></ion-icon>
+                  <span>Credit Card</span>
+                  <img
+                    src="images\credit_services.png"
+                    width="90px"
+                    class="services"
+                  />
+                  <ion-icon
+                    class="checkmark"
+                    name="checkmark-circle-outline"
+                  ></ion-icon>
+                </div>
               </button>
-              <button class="method">
-                <ion-icon name="logo-paypal"></ion-icon>
-                <span>PayPal</span>
-                <ion-icon
-                  class="checkmark"
-                  name="checkmark-circle-outline"
-                ></ion-icon>
+              <button id="debit-card" class="method">
+                <div class="method-header">
+                  <ion-icon name="card"></ion-icon>
+                  <span>Debit Card</span>
+                  <ion-icon
+                    class="checkmark"
+                    name="checkmark-circle-outline"
+                  ></ion-icon>
+                </div>
+              </button>
+              <button id="momo" class="method">
+                <div class="method-header">
+                  <img
+                    src="images\MoMo_Logo.png"
+                    width="20px"
+                    class="method-img"
+                  />
+                  <span>Momo</span>
+                  <ion-icon
+                    class="checkmark"
+                    name="checkmark-circle-outline"
+                  ></ion-icon>
+                </div>
+              </button>
+              <button id="zalopay" class="method">
+                <div class="method-header">
+                  <img
+                    src="images\Zalopay-Logo-Vector.svg-.png"
+                    alt="product image"
+                    width="25px"
+                    class="method-img"
+                  />
+                  <span>Zalo Pay</span>
+                  <ion-icon
+                    class="checkmark"
+                    name="checkmark-circle-outline"
+                  ></ion-icon>
+                </div>
+              </button>
+              <button id="paypal" class="method">
+                <div class="method-header">
+                  <ion-icon name="logo-paypal"></ion-icon>
+                  <span>PayPal</span>
+                  <ion-icon
+                    class="checkmark"
+                    name="checkmark-circle-outline"
+                  ></ion-icon>
+                </div>
               </button>
             </div>
-            <form action="#">
-              <div class="cardholder-name">
-                <label for="cardholder-name" class="label-default"
-                  >Cardholder name</label
-                >
-                <input
-                  type="text"
-                  name="cardholder-name"
-                  id="cardholder-name"
-                  class="input-default"
-                />
-              </div>
-              <div class="card-number">
-                <label for="card-number" class="label-default"
-                  >Card number</label
-                >
-                <input
-                  type="text"
-                  name="card-number"
-                  id="card-number"
-                  class="input-default"
-                />
-              </div>
-              <div class="input-flex">
-                <div class="expire-date">
-                  <label for="expire-date" class="label-default"
-                    >Expiration date</label
-                  >
-                  <div class="input-flex">
-                    <input
-                      type="number"
-                      name="day"
-                      id="expire-date"
-                      placeholder="31"
-                      min="1"
-                      max="31"
-                      class="input-default"
-                    />
-                    /
-                    <input
-                      type="number"
-                      name="month"
-                      id="expire-date"
-                      placeholder="12"
-                      min="1"
-                      max="12"
-                      class="input-default"
-                    />
-                  </div>
-                </div>
-                <div class="cvv">
-                  <label for="cvv" class="label-default">CVV</label>
-                  <input
-                    type="number"
-                    name="cvv"
-                    id="cvv"
-                    class="input-default"
-                  />
-                </div>
-              </div>
-            </form>
           </div>
         </section>
         <!-- Section Cart -->
         <section class="cart">
           <div class="cart-item-box">
             <h2 class="section-heading">Order Summary</h2>
-
-            <!-- Product 1 - Item card -->
-            <div class="product-card">
-              <div class="card">
-                <div class="img-box">
-                  <img
-                    src="images\placeholder-image.png"
-                    alt="product image"
-                    width="80px"
-                    class="product-img"
-                  />
-                </div>
-                <div class="detail">
-                  <h4 class="product-name">Product 1 name</h4>
-                  <div class="wrapper">
-                    <div class="product-qty">
-                      <button id="decrement">
-                        <ion-icon name="remove-outline"></ion-icon>
-                      </button>
-                      <span id="quantity">1</span>
-                      <button id="increment">
-                        <ion-icon name="add-outline"></ion-icon>
-                      </button>
-                    </div>
-                    <div class="price">VND <span id="price">50.000</span></div>
-                    <button class="product-close-btn">
-                      <ion-icon name="close-outline"></ion-icon>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Product 2 - Item card -->
-            <div class="product-card">
-              <div class="card">
-                <div class="img-box">
-                  <img
-                    src="images\placeholder-image.png"
-                    alt="product image"
-                    width="80px"
-                    class="product-img"
-                  />
-                </div>
-                <div class="detail">
-                  <h4 class="product-name">Product 2 name</h4>
-                  <div class="wrapper">
-                    <div class="product-qty">
-                      <button id="decrement">
-                        <ion-icon name="remove-outline"></ion-icon>
-                      </button>
-                      <span id="quantity">1</span>
-                      <button id="increment">
-                        <ion-icon name="add-outline"></ion-icon>
-                      </button>
-                    </div>
-                    <div class="price">VND <span id="price">50.000</span></div>
-                    <button class="product-close-btn">
-                      <ion-icon name="close-outline"></ion-icon>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
 
           <div class="wrapper">
@@ -188,24 +111,24 @@
             <div class="amount">
               <div class="subtotal">
                 <span>Subtotal</span>
-                <span>VND <span id="subtotal">100.000</span></span>
+                <span>$ <span id="subtotal">10.00</span></span>
               </div>
               <div class="tax">
                 <span>Tax</span>
-                <span>VND <span id="tax">10.000</span></span>
+                <span>$ <span id="tax">1.00</span></span>
               </div>
               <div class="shipping">
                 <span>Shipping</span>
-                <span>VND <span id="shipping">10.000</span></span>
+                <span>$ <span id="shipping">1.00</span></span>
               </div>
               <div class="total">
                 <span>Total</span>
-                <span>VND <span id="total">120.000</span></span>
+                <span>$ <span id="total">12.00</span></span>
               </div>
             </div>
             <div class="submit-payment">
               <button class="btn btn-primary">
-                <b>Pay</b> <span id="payAmount">110.000</span> VND
+                <b>Pay</b> $ <span id="payAmount">10</span>
               </button>
             </div>
           </div>
