finish_api_with_cart.html

--- a/about/about.html
+++ b/about/about.html
@@ -9,8 +9,23 @@
     <title>About us</title>
 </head>
 <body>
-    <header>
-       Logo + Navigation
+    <header id="header">
+        <!-- <a href="#" class="logo">
+            <img class="logoonggia" width="100px" src="./Info_img/logoOngGia.png">
+        </a>
+
+        <div id="menu-bar" class="fas fa-bars fa-times"></div>
+
+        <nav class="navbar">
+            <a href="./food/index.html">Home</a>
+            <a href="./food/detail.html">Detail</a>
+            <a class="admin-container" href="../admin/admin.html">Admin</a>
+
+            <a class="cart" href="./food/cart.html">
+                <i class="fa fa-shopping-cart" style="font-size:18px">
+                    <span class='badge badge-danger' id='lblCartCount'>0</span></i>
+            </a>
+        </nav> -->
     </header>
     <main>
         <div class="fading_filter">
