--- a/food/index.html
+++ b/food/index.html
@@ -27,13 +27,16 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="detail.html">Detail</a>
+            <a href="/UIT_Team02_Web/about/about.html">About</a>
 
             <a class="admin-container" href="../admin/admin.html">Admin</a>
-
+            
             <a class="cart" href="cart.html">
                 <i class="fa fa-shopping-cart" style="font-size:18px">
                     <span class='badge badge-danger' id='lblCartCount'>0</span></i>
             </a>
+
+
         </nav>
     </header>
 
