--- a/about/about.html
+++ b/about/about.html
@@ -6,11 +6,32 @@
     <meta name="description" content="This is about page of The Oldman">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="/UIT_Team02_Web/food/style.css">
+
     <title>About us</title>
+
 </head>
 <body>
-    <header>
-       Logo + Navigation
+    <header id="bgColorHeader">
+        <a href="#" class="logo">
+            <img class="logoonggia" width="100px" src="/UIT_Team02_Web/food/images/logoOngGia.png">
+        </a>
+
+        <div id="menu-bar" class="fas fa-bars fa-times"></div>
+
+        <nav class="navbar">
+            <a href="/UIT_Team02_Web/food/index.html">Home</a>
+            <a href="/UIT_Team02_Web/food/detail.html">Detail</a>
+            <a href="/UIT_Team02_Web/about/about.html">About</a>
+
+            <a class="admin-container" href="/UIT_Team02_Web/admin/admin.html">Admin</a>
+            
+            <a class="cart" href="/UIT_Team02_Web/food/cart.html">
+                <i class="fa fa-shopping-cart" style="font-size:18px">
+                    <span class='badge badge-danger' id='lblCartCount'>0</span></i>
+            </a>
+
+        </nav>
     </header>
     <main>
         <div class="fading_filter">
