Adjust checjout.js

--- a/checkout.html
+++ b/checkout.html
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="submit-payment">
-              <button class="btn btn-primary">
+              <button id="pay-button" class="btn btn-primary">
                 <b>Pay</b> $ <span id="payAmount">10</span>
               </button>
             </div>
