--- a/food/index.html
+++ b/food/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/UIT_Team02_Web/about/about.css">
 
 </head>
+<!-- TEAM 02 - WEB -->
 
 <body>
     <header id="bgColorHeader">
