--- a/food/cart.html
+++ b/food/cart.html
@@ -26,17 +26,17 @@
 <body>
     <!-- header section starts  -->
     <header id="bgColorHeader">
-        <a href="index.html" class="logo">
-            <img class="logoonggia" width="100px" src="images/logoOngGia.png">
+        <a href="/food/index.html" class="logo">
+            <img class="logoonggia" width="100px" src="/food/images/logoOngGia.png">
         </a>
 
         <div id="menu-bar" class="fas fa-bars fa-times"></div>
 
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="detail.html">Detail</a>
-            <a href="/UIT_Team02_Web/about/about.html">About</a>
-            <a class="admin-container" href="/UIT_Team02_Web/admin/admin.html">Admin</a>
+            <a href="/food/index.html">Home</a>
+            <a href="/food/detail.html">Detail</a>
+            <a href="/about/about.html">About</a>
+            <a class="admin-container" href="/admin/admin.html">Admin</a>
 
             <a class="cart" href="#default">
                 <i class="fa fa-shopping-cart" style="font-size:18px">
@@ -82,7 +82,7 @@
 
 
 
-    <script src="cartPage.js"></script>
+    <script src="/food/cartPage.js"></script>
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
