--- a/food/detail.html
+++ b/food/detail.html
@@ -14,27 +14,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cart.css">
-    <link rel="stylesheet" href="/UIT_Team02_Web/about/about.css">
+    <link rel="stylesheet" href="/food/style.css">
+    <link rel="stylesheet" href="/food/cart.css">
+    <link rel="stylesheet" href="/about/about.css">
 
 </head>
 
 <body>
     <header id="bgColorHeader">
-        <a href="index.html" class="logo">
-            <img class="logoonggia" width="100px" src="images/logoOngGia.png">
+        <a href="/food/index.html" class="logo">
+            <img class="logoonggia" width="100px" src="/food/images/logoOngGia.png">
         </a>
 
         <div id="menu-bar" class="fas fa-bars fa-times"></div>
 
         <nav class="navbar">
-            <a href="index.html">Home</a>
+            <a href="/food/index.html">Home</a>
             <a href="#detail">Detail</a>
-            <a href="/UIT_Team02_Web/about/about.html">About</a>
+            <a href="/about/about.html">About</a>
 
-            <a class="admin-container" href="/UIT_Team02_Web/admin/admin.html">Admin</a>
-            <a class="cart" href="cart.html">
+            <a class="admin-container" href="/admin/admin.html">Admin</a>
+            <a class="cart" href="/food/cart.html">
                 <i class="fa fa-shopping-cart" style="font-size:18px">
                     <span class='badge badge-danger' id='lblCartCount'>0</span></i>
             </a>
