Add button redirect to home page

--- a/checkout.html
+++ b/checkout.html
@@ -13,6 +13,7 @@
     <main class="container">
       <h1 class="heading">
         <ion-icon name="card-outline"></ion-icon> Check out
+        <button class="home">Home</button>
       </h1>
       <div class="item-flex">
         <!-- Section checkout -->
