--- a/about/about.html
+++ b/about/about.html
@@ -5,15 +5,18 @@
     <meta name="author" content="21522899">
     <meta name="description" content="This is about page of The Oldman">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/food/style.css">
-    <link rel="stylesheet" href="/about/about.css">
-    
-
+        <!-- font awesome cdn link  -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="/food/style.css"> -->
+    <link rel="stylesheet" href="about.css">
     <title>About us</title>
 
 </head>
 <body>
-    <header id="bgColorHeader">
+    <!-- fix done -->
+    <header style=" background-color: rgb(223, 223, 61);" id="bgColorHeader">
         <a href="#" class="logo">
             <img class="logoonggia" width="100px" src="/food/images/logoOngGia.png">
         </a>
@@ -28,8 +31,10 @@
             <a class="admin-container" href="/admin/admin.html">Admin</a>
             
             <a class="cart" href="/food/cart.html">
-                <i class="fa fa-shopping-cart" style="font-size:18px">
-                    <span class='badge badge-danger' id='lblCartCount'>0</span></i>
+                <i class="fa fa-shopping-cart" style="font-size:22px">
+                    <span style="top: 0;" class='badge badge-danger' id='lblCartCount'>0</span>
+
+                  </i>
             </a>
 
         </nav>
