styling_finish_about

--- a/about/about.html
+++ b/about/about.html
@@ -11,17 +11,18 @@
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="/food/style.css"> -->
     <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="/about/header.css">
     <title>About us</title>
 
 </head>
 <body>
     <!-- fix done -->
-    <header style=" background-color: rgb(223, 223, 61);" id="bgColorHeader">
+    <header>
         <a href="#" class="logo">
             <img class="logoonggia" width="100px" src="/food/images/logoOngGia.png">
         </a>
 
-        <div id="menu-bar" class="fas fa-bars fa-times"></div>
+        
 
         <nav class="navbar">
             <a href="/food/index.html">Home</a>
