--- a/food/cart.html
+++ b/food/cart.html
@@ -18,7 +18,8 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="/UIT_Team02_Web/about/about.css">
+      <link rel="stylesheet" href="/about/about.css">
+      <link rel="stylesheet" href="cart.css">
 </head>
 
 <body>
@@ -37,7 +38,8 @@
 
             <a class="cart" href="#default">
                 <i class="fa fa-shopping-cart" style="font-size:18px">
-                    <span class='badge badge-danger' id='lblCartCount'>0</span></i>
+                    <span style="right:0%;top: -8%" class='badge badge-danger' id='lblCartCount'>0</span>
+                  </i>
             </a>
 
         </nav>
@@ -53,19 +55,14 @@
 
     </div>
 
+    <div class="checkOut">
+
+    </div>
     
-    <button style= "float: right;margin-right: 30px;font-size: 38px;
-    border: 6px solid #6579ff;
-    border-radius: 1.8rem;
-    margin: 2rem .8rem auto auto;
-    transition: transform .2s;
-    /* Animation */
-    background-color: #6579ff;"
-     class="btn btn-primary" onclick="goToCheckout()">Go to checkout
-      </button>
+
          </div>
   
-   <section style=" top:auto ;border: none;background-color: rgb(223, 223, 61)" id="footer">
+   <section style=" top:auto ;border: none;" id="footer">
         <p id="footer_title">Old Man Restaurant</p>
         <article>
             <p>Ho Chi Minh branch</p>
@@ -84,15 +81,10 @@
     </section>
 
 
-
  
         <script src="cartPage.js"></script>
+        <script src="index.js"></script>
+    
 
-        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-                </body>
-                </html
+    </body>
+    </html>
