--- a/food/detail.html
+++ b/food/detail.html
@@ -16,18 +16,16 @@
 
 
     <link rel="stylesheet" href="/food/style.css">
-    <link rel="stylesheet" href="/food/cart.css">
-    <link rel="stylesheet" href="/about/about.css">
->>>>>>> main
+    <!-- <link rel="stylesheet" href="/food/cart.css"> -->
+    <!-- <link rel="stylesheet" href="/about/about.css"> -->
 
 </head>
 
 <body>
 
     <header id="bgColorHeader">
-        <a href="/food/index.html" class="logo">
+        <a href="index.html" class="logo">
             <img class="logoonggia" width="100px" src="/food/images/logoOngGia.png">
->>>>>>> main
         </a>
 
         <div id="menu-bar" class="fas fa-bars fa-times"></div>
@@ -42,7 +40,7 @@
             <a class="cart" href="/food/cart.html">
 
                 <i class="fa fa-shopping-cart" style="font-size:18px">
-                    <span class='badge badge-danger' id='lblCartCount'>0</span></i>
+                    <span style="right:0%;top: -8%" class='badge badge-danger' id='lblCartCount'>0</span></i>
             </a>
         </nav>
 
@@ -79,9 +77,9 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+        </script> -->
     <script src="detail.js"></script>
     <script src="index.js"></script>
 
