--- a/food/index.html
+++ b/food/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="/about/about.css">
+    <!-- <link rel="stylesheet" href="/about/about.css"> -->
 
 </head>
 <!-- UIT - TEAM 02 - WEB  -->
@@ -38,7 +38,7 @@
 
             <a class="cart" href="/food/cart.html">
                 <i class="fa fa-shopping-cart" style="font-size:18px">
-                    <span class='badge badge-danger' id='lblCartCount'>0</span></i>
+                    <span style="right:0%;top: -8%" class='badge badge-danger' id='lblCartCount'>0</span></i>
             </a>
 
 
@@ -105,12 +105,7 @@
 
     <script src="/food/index.js"></script>
     <script src="/food/detail.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script> -->
-
-
-
+    
 
 </body>
 
