--- a/food/cart.html
+++ b/food/cart.html
@@ -17,7 +17,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
       <link rel="stylesheet" href="/about/about.css">
       <link rel="stylesheet" href="cart.css">
 </head>
