--- a/food/detail.html
+++ b/food/detail.html
@@ -81,7 +81,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
         </script> -->
     <script src="detail.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js"></script>    
+    <script src="cartPage.js"></script>
+
 
 
 </body>
