--- a/food/detail.html
+++ b/food/detail.html
@@ -82,6 +82,7 @@
         </script> -->
     <script src="detail.js"></script>
     <script src="index.js"></script>
+    <script src="cartPage.js"></script>
 
 
 </body>
